# INDIA-RUNS_The-Data-AI-Challenge

./: .gitignore  HACKATHON_TEAM.csv  HACKATHON_TEAM.xlsx  METHODOLOGY.md  README.md  pyproject.toml  rank.py  requirements.txt  submission_metadata.yaml
sandbox/: app.py
scripts/: build_dev_set.py  evaluate_baselines.py
src/redrob_ranker/: __init__.py  jd_contract.py  job_description.py  precompute.py  rank.py  types.py
src/redrob_ranker/features/: __init__.py  behavioral.py  career_history.py  evidence_consensus.py  honeypot.py  normalize.py  seniority_alignment.py  skills.py  title_alignment.py
src/redrob_ranker/reasoning/: __init__.py  evidence_builder.py
src/redrob_ranker/scoring/: __init__.py  fit_score.py  semantic.py  suspiciousness.py
src/redrob_ranker/utils/: __init__.py  hash_guard.py  io.py
tests/: conftest.py  test_behavioral.py  test_career_history.py  test_dynamic_jd_safety.py  test_evidence_consensus.py  test_fit_score.py  test_io.py  test_job_description.py  test_normalization.py  test_precompute.py  test_rank_pipeline.py  test_reasoning.py  test_seniority_alignment.py  test_skills.py  test_submission_format.py  test_suspiciousness.py  test_title_alignment.py
